vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Registers a callback for the LibVLC exit event. This is mostly useful if<br>
     * the VLC playlist and/or at least one interface are started with<br>
     * libvlc_playlist_play() or libvlc_add_intf() respectively.<br>
     * Typically, this function will wake up your application main loop (from<br>
     * another thread).<br>
     * \note This function should be called before the playlist or interface are<br>
     * started. Otherwise, there is a small race condition: the exit event could<br>
     * be raised before the handler is registered.<br>
     * \param p_instance LibVLC instance<br>
     * \param cb callback to invoke when LibVLC wants to exit,<br>
     *           or NULL to disable the exit handler (as by default)<br>
     * \param opaque data pointer for the callback<br>
     * \warning This function and libvlc_wait() cannot be used at the same time.<br>
     * Original signature : <code>void libvlc_set_exit_handler(libvlc_instance_t*, libvlc_set_exit_handler_cb_callback*, void*)</code><br>
     * <i>native declaration : line 259</i>
     */
    public static native void libvlc_set_exit_handler(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<LibvlcLibrary.libvlc_set_exit_handler_cb_callback > cb, Pointer<? > opaque);
    /**
     * Waits until an interface causes the instance to exit.<br>
     * You should start at least one interface first, using libvlc_add_intf().<br>
     * \param p_instance the instance<br>
     * \warning This function wastes one thread doing basically nothing.<br>
     * libvlc_set_exit_handler() should be used instead.<br>
     * Original signature : <code>void libvlc_wait(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 271</i>
     */
    public static native void libvlc_wait(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Sets the application name. LibVLC passes this as the user agent string<br>
     * when a protocol requires it.<br>
     * \param p_instance LibVLC instance<br>
     * \param name human-readable application name, e.g. "FooBar player 1.2.3"<br>
     * \param http HTTP User Agent, e.g. "FooBar/1.2.3 Python/2.6.0"<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_set_user_agent(libvlc_instance_t*, const char*, const char*)</code><br>
     * <i>native declaration : line 283</i>
     */
    public static native void libvlc_set_user_agent(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<Byte > name, Pointer<Byte > http);
    /**
     * Sets some meta-information about the application.<br>
     * See also libvlc_set_user_agent().<br>
     * \param p_instance LibVLC instance<br>
     * \param id Java-style application identifier, e.g. "com.acme.foobar"<br>
     * \param version application version numbers, e.g. "1.2.3"<br>
     * \param icon application icon name, e.g. "foobar"<br>
     * \version LibVLC 2.1.0 or later.<br>
     * Original signature : <code>void libvlc_set_app_id(libvlc_instance_t*, const char*, const char*, const char*)</code><br>
     * <i>native declaration : line 297</i>
     */
    public static native void libvlc_set_app_id(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<Byte > id, Pointer<Byte > version, Pointer<Byte > icon);
    /**
     * Retrieve libvlc version.<br>
     * Example: "1.1.0-git The Luggage"<br>
     * \return a string containing the libvlc version<br>
     * Original signature : <code>char* libvlc_get_version()</code><br>
     * <i>native declaration : line 307</i>
     */
    public static native Pointer<Byte > libvlc_get_version();
    /**
     * Retrieve libvlc compiler version.<br>
     * Example: "gcc version 4.2.3 (Ubuntu 4.2.3-2ubuntu6)"<br>
     * \return a string containing the libvlc compiler version<br>
     * Original signature : <code>char* libvlc_get_compiler()</code><br>
     * <i>native declaration : line 316</i>
     */
    public static native Pointer<Byte > libvlc_get_compiler();
    /**
     * Retrieve libvlc changeset.<br>
     * Example: "aa9bce0bc4"<br>
     * \return a string containing the libvlc changeset<br>
     * Original signature : <code>char* libvlc_get_changeset()</code><br>
     * <i>native declaration : line 325</i>
     */
    public static native Pointer<Byte > libvlc_get_changeset();
    /**
     * Frees an heap allocation returned by a LibVLC function.<br>
     * If you know you're using the same underlying C run-time as the LibVLC<br>
     * implementation, then you can call ANSI C free() directly instead.<br>
     * \param ptr the pointer<br>
     * Original signature : <code>void libvlc_free(void*)</code><br>
     * <i>native declaration : line 334</i>
     */
    public static native void libvlc_free(Pointer<? > ptr);
    /**
     * Register for an event notification.<br>
     * \param p_event_manager the event manager to which you want to attach to.<br>
     *        Generally it is obtained by vlc_my_object_event_manager() where<br>
     *        my_object is the object you want to listen to.<br>
     * \param i_event_type the desired event to which we want to listen<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param user_data user provided data to carry with the event<br>
     * \return 0 on success, ENOMEM on error<br>
     * Original signature : <code>int libvlc_event_attach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 377</i>
     */
    public static native int libvlc_event_attach(Pointer<LibvlcLibrary.libvlc_event_manager_t > p_event_manager, int i_event_type, Pointer<LibvlcLibrary.libvlc_callback_t > f_callback, Pointer<? > user_data);
    /**
     * Unregister an event notification.<br>
     * \param p_event_manager the event manager<br>
     * \param i_event_type the desired event to which we want to unregister<br>
     * \param f_callback the function to call when i_event_type occurs<br>
     * \param p_user_data user provided data to carry with the event<br>
     * Original signature : <code>void libvlc_event_detach(libvlc_event_manager_t*, libvlc_event_type_t, libvlc_callback_t, void*)</code><br>
     * <i>native declaration : line 390</i>
     */
    public static native void libvlc_event_detach(Pointer<LibvlcLibrary.libvlc_event_manager_t > p_event_manager, int i_event_type, Pointer<LibvlcLibrary.libvlc_callback_t > f_callback, Pointer<? > p_user_data);
    /**
     * Get an event's type name.<br>
     * \param event_type the desired event<br>
     * Original signature : <code>char* libvlc_event_type_name(libvlc_event_type_t)</code><br>
     * <i>native declaration : line 400</i>
     */
    public static native Pointer<Byte > libvlc_event_type_name(int event_type);
    /**
     * Gets debugging information about a log message: the name of the VLC module<br>
     * emitting the message and the message location within the source code.<br>
     * The returned module name and file name will be NULL if unknown.<br>
     * The returned line number will similarly be zero if unknown.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param module module name storage (or NULL) [OUT]<br>
     * \param file source code file name storage (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_context(const libvlc_log_t*, const char**, const char**, unsigned*)</code><br>
     * <i>native declaration : line 440</i>
     */
    public static native void libvlc_log_get_context(Pointer<LibvlcLibrary.vlc_log_t > ctx, Pointer<Pointer<Byte > > module, Pointer<Pointer<Byte > > file, Pointer<Integer > line);
    /**
     * Gets VLC object information about a log message: the type name of the VLC<br>
     * object emitting the message, the object header if any and a temporaly-unique<br>
     * object identifier. This information is mainly meant for <b>manual</b><br>
     * troubleshooting.<br>
     * The returned type name may be "generic" if unknown, but it cannot be NULL.<br>
     * The returned header will be NULL if unset; in current versions, the header<br>
     * is used to distinguish for VLM inputs.<br>
     * The returned object ID will be zero if the message is not associated with<br>
     * any VLC object.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param name object name storage (or NULL) [OUT]<br>
     * \param header object header (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_object(const libvlc_log_t*, const char**, const char**, uintptr_t*)</code><br>
     * <i>native declaration : line 464</i>
     */
    public static native void libvlc_log_get_object(Pointer<LibvlcLibrary.vlc_log_t > ctx, Pointer<Pointer<Byte > > name, Pointer<Pointer<Byte > > header, Pointer<Pointer<Integer > > id);
    /**
     * Unsets the logging callback for a LibVLC instance. This is rarely needed:<br>
     * the callback is implicitly unset when the instance is destroyed.<br>
     * This function will wait for any pending callbacks invocation to complete<br>
     * (causing a deadlock if called from within the callback).<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_unset(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 490</i>
     */
    public static native void libvlc_log_unset(Pointer<LibvlcLibrary.libvlc_instance_t > libvlc_instance_tPtr1);
    /**
     * Sets the logging callback for a LibVLC instance.<br>
     * This function is thread-safe: it will wait for any pending callbacks<br>
     * invocation to complete.<br>
     * \param cb callback function pointer<br>
     * \param data opaque data pointer for the callback function<br>
     * \note Some log messages (especially debug) are emitted by LibVLC while<br>
     * is being initialized. These messages cannot be captured with this interface.<br>
     * \warning A deadlock may occur if this function is called from the callback.<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set(libvlc_instance_t*, libvlc_log_cb, void*)</code><br>
     * <i>native declaration : line 508</i>
     */
    public static native void libvlc_log_set(Pointer<LibvlcLibrary.libvlc_instance_t > libvlc_instance_tPtr1, Pointer<LibvlcLibrary.libvlc_log_cb > cb, Pointer<? > data);
    /**
     * Sets up logging to a file.<br>
     * \param p_instance libvlc instance<br>
     * \param stream FILE pointer opened for writing<br>
     *         (the FILE pointer must remain valid until libvlc_log_unset())<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set_file(libvlc_instance_t*, FILE*)</code><br>
     * <i>native declaration : line 519</i>
     */
    public static native void libvlc_log_set_file(Pointer<LibvlcLibrary.libvlc_instance_t > libvlc_instance_tPtr1, Pointer<LibvlcLibrary.FILE > stream);
